unpackaged/main/default/objects/Supplier_Credit_Note__c/Supplier_Credit_Note__c.object-meta.xml
<CustomObject>
    <label>Supplier Credit Note</label>
    <nameField>
        <displayFormat>SCN{000000}</displayFormat>
        <label>Chumley Supplier Credit Note Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplier Credit Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>