unpackaged/main/default/objects/Supplier_Credit_Note__c/fields/Account_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_Code__c</fullName>
    <formula>Supplier_Invoice__r.Account_Reference__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Code</label>
    <type>Text</type>
</CustomField>