unpackaged/main/default/objects/Supplier_Credit_Note__c/fields/Credit_Value_Gross__c.field-meta.xml
<CustomField>
    <fullName>Credit_Value_Gross__c</fullName>
    <formula>Credit_Value_NET__c  +  Credit_Value_VAT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Value Gross</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>