unpackaged/main/default/objects/Supplier_Credit_Note__c/fields/Credit_Value_NET__c.field-meta.xml
<CustomField>
    <fullName>Credit_Value_NET__c</fullName>
    <label>Credit Value NET</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>