unpackaged/main/default/objects/Supplier_Credit_Note__c/fields/GL_Code_Number__c.field-meta.xml
<CustomField>
    <fullName>GL_Code_Number__c</fullName>
    <formula>Supplier_Invoice__r.Exchequer_General_Ledger_Code_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GL Code Number</label>
    <type>Text</type>
</CustomField>