unpackaged/main/default/objects/Supplier_Credit_Note__c/fields/Supplier_Address_City__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Address_City__c</fullName>
    <formula>Supplier_Invoice__r.Supplier_City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Address City</label>
    <type>Text</type>
</CustomField>