unpackaged/main/default/objects/Supplier_Credit_Note__c/fields/Supplier_Address_Country__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Address_Country__c</fullName>
    <formula>Supplier_Invoice__r.Supplier_Country__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Address Country</label>
    <type>Text</type>
</CustomField>