unpackaged/main/default/objects/Supplier_Credit_Note__c/fields/Supplier_Address_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Address_Postcode__c</fullName>
    <formula>Supplier_Invoice__r.Supplier_Postal_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Address Postcode</label>
    <type>Text</type>
</CustomField>