unpackaged/main/default/objects/Supplier_Credit_Note__c/fields/Supplier_Credit_Note_Date__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Credit_Note_Date__c</fullName>
    <label>Supplier Credit Note Date</label>
    <type>Date</type>
</CustomField>