unpackaged/main/default/objects/Supplier_Credit_Note__c/fields/Supplier_Credit_Note_Number__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Credit_Note_Number__c</fullName>
    <label>Supplier Credit Note Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>