unpackaged/main/default/objects/Supplier_Credit_Note__c/fields/Supplier_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Invoice__c</fullName>
    <label>Supplier Invoice</label>
    <referenceTo>Supplier_Invoice__c</referenceTo>
    <relationshipLabel>Supplier Credit Notes</relationshipLabel>
    <relationshipName>Supplier_Credit_Notes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>