unpackaged/main/default/objects/Supplier_Credit_Note__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Credit_Value_NET__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>